// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot Governance > preimage submission, query and removal works > note preimage events 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Noted",
    "section": "preimage",
  },
]
`;

exports[`Polkadot Governance > preimage submission, query and removal works > unnote preimage events 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Cleared",
    "section": "preimage",
  },
]
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > cancelling referendum with signed origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 84000)",
          "refTime": "(rounded 560000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > charlie's class locks after their vote's rescission 1`] = `
[
  [
    30,
    50000000000,
  ],
]
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > charlie's votes after casting his 1`] = `
{
  "standard": {
    "balance": 50000000000,
    "vote": "0x83",
  },
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > charlie's votes after referendum's cancellation 1`] = `
{
  "standard": {
    "balance": 50000000000,
    "vote": "0x83",
  },
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > charlie's votes after rescission 1`] = `
{
  "delegations": {
    "capital": 0,
    "votes": 0,
  },
  "prior": [
    0,
    0,
  ],
  "votes": [],
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > dave's class locks after their vote's rescission 1`] = `
[
  [
    30,
    60000000000,
  ],
]
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > dave's votes after casting his 1`] = `
{
  "split": {
    "aye": 50000000000,
    "nay": 10000000000,
  },
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > dave's votes after referendum's cancellation 1`] = `
{
  "split": {
    "aye": 50000000000,
    "nay": 10000000000,
  },
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > dave's votes after rescission 1`] = `
{
  "delegations": {
    "capital": 0,
    "votes": 0,
  },
  "prior": [
    0,
    0,
  ],
  "votes": [],
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > eve's class locks after their vote's rescission 1`] = `
[
  [
    30,
    80000000000,
  ],
]
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > eve's votes after casting hers 1`] = `
{
  "splitAbstain": {
    "abstain": 20000000000,
    "aye": 50000000000,
    "nay": 10000000000,
  },
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > eve's votes after referendum's cancellation 1`] = `
{
  "splitAbstain": {
    "abstain": 20000000000,
    "aye": 50000000000,
    "nay": 10000000000,
  },
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > eve's votes after rescission 1`] = `
{
  "delegations": {
    "capital": 0,
    "votes": 0,
  },
  "prior": [
    0,
    0,
  ],
  "votes": [],
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > events for bob's decision deposit 1`] = `
[
  {
    "data": {
      "amount": 10000000000,
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "DecisionDepositPlaced",
    "section": "referenda",
  },
]
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > events for charlie's vote 1`] = `[]`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > events for dave's vote 1`] = `[]`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > events for eve's vote 1`] = `[]`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum info after charlie's vote 1`] = `
{
  "ongoing": {
    "deciding": {
      "confirming": null,
    },
    "decisionDeposit": {
      "amount": 10000000000,
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "enactment": {
      "after": 1,
    },
    "inQueue": false,
    "origin": {
      "origins": "SmallTipper",
    },
    "proposal": {
      "inline": "0x13030700e40b5402008eaf04151687736326c9fea17e25fc5287613693c912909cb226aa4794f26a48",
    },
    "submissionDeposit": {
      "amount": 10000000000,
      "who": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "tally": {
      "ayes": 150000000000,
      "nays": 0,
      "support": 50000000000,
    },
    "track": 30,
  },
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum info after dave's vote 1`] = `
{
  "ongoing": {
    "deciding": {
      "confirming": null,
    },
    "decisionDeposit": {
      "amount": 10000000000,
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "enactment": {
      "after": 1,
    },
    "inQueue": false,
    "origin": {
      "origins": "SmallTipper",
    },
    "proposal": {
      "inline": "0x13030700e40b5402008eaf04151687736326c9fea17e25fc5287613693c912909cb226aa4794f26a48",
    },
    "submissionDeposit": {
      "amount": 10000000000,
      "who": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "tally": {
      "ayes": 155000000000,
      "nays": 1000000000,
      "support": 100000000000,
    },
    "track": 30,
  },
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum info after eve's vote 1`] = `
{
  "ongoing": {
    "deciding": {
      "confirming": null,
    },
    "decisionDeposit": {
      "amount": 10000000000,
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "enactment": {
      "after": 1,
    },
    "inQueue": false,
    "origin": {
      "origins": "SmallTipper",
    },
    "proposal": {
      "inline": "0x13030700e40b5402008eaf04151687736326c9fea17e25fc5287613693c912909cb226aa4794f26a48",
    },
    "submissionDeposit": {
      "amount": 10000000000,
      "who": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "tally": {
      "ayes": 160000000000,
      "nays": 2000000000,
      "support": 170000000000,
    },
    "track": 30,
  },
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum info before decision deposit 1`] = `
{
  "ongoing": {
    "deciding": null,
    "decisionDeposit": null,
    "enactment": {
      "after": 1,
    },
    "inQueue": false,
    "origin": {
      "origins": "SmallTipper",
    },
    "proposal": {
      "inline": "0x13030700e40b5402008eaf04151687736326c9fea17e25fc5287613693c912909cb226aa4794f26a48",
    },
    "submissionDeposit": {
      "amount": 10000000000,
      "who": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "tally": {
      "ayes": 0,
      "nays": 0,
      "support": 0,
    },
    "track": 30,
  },
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum info post decision deposit 1`] = `
{
  "ongoing": {
    "deciding": null,
    "decisionDeposit": {
      "amount": 10000000000,
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "enactment": {
      "after": 1,
    },
    "inQueue": false,
    "origin": {
      "origins": "SmallTipper",
    },
    "proposal": {
      "inline": "0x13030700e40b5402008eaf04151687736326c9fea17e25fc5287613693c912909cb226aa4794f26a48",
    },
    "submissionDeposit": {
      "amount": 10000000000,
      "who": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "tally": {
      "ayes": 0,
      "nays": 0,
      "support": 0,
    },
    "track": 30,
  },
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum submission events 1`] = `
[
  {
    "data": {
      "proposal": {
        "Inline": "(hash)",
      },
      "track": 30,
    },
    "method": "Submitted",
    "section": "referenda",
  },
]
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > referendum upon start of decision period 1`] = `
{
  "deciding": {
    "confirming": null,
  },
  "decisionDeposit": {
    "amount": 10000000000,
    "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
  },
  "enactment": {
    "after": 1,
  },
  "inQueue": false,
  "origin": {
    "origins": "SmallTipper",
  },
  "proposal": {
    "inline": "0x13030700e40b5402008eaf04151687736326c9fea17e25fc5287613693c912909cb226aa4794f26a48",
  },
  "submissionDeposit": {
    "amount": 10000000000,
    "who": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
  },
  "tally": {
    "ayes": 0,
    "nays": 0,
    "support": 0,
  },
  "track": 30,
}
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > refund of decision deposit 1`] = `
[
  {
    "data": {
      "amount": 10000000000,
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "DecisionDepositRefunded",
    "section": "referenda",
  },
]
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > refund of submission deposit 1`] = `
[
  {
    "data": {
      "amount": 10000000000,
      "who": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "SubmissionDepositRefunded",
    "section": "referenda",
  },
]
`;

exports[`Polkadot Governance > referendum lifecycle test - submission, decision deposit, various voting should all work > removal of votes in cancelled referendum 1`] = `
[
  {
    "data": {
      "amount": "(rounded 220000000)",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {},
    "method": "ItemCompleted",
    "section": "utility",
  },
  {
    "data": {},
    "method": "ItemCompleted",
    "section": "utility",
  },
  {
    "data": {},
    "method": "ItemCompleted",
    "section": "utility",
  },
  {
    "data": {},
    "method": "BatchCompleted",
    "section": "utility",
  },
  {
    "data": {
      "amount": 0,
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 180000000)",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 44000000)",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 220000000)",
      "tip": 0,
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 150000)",
          "refTime": "(rounded 1300000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Polkadot Governance > referendum lifecycle test 2 - submission, decision deposit, and killing should work > killing referendum with signed origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 84000)",
          "refTime": "(rounded 640000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;
